--- a/slow-server.service
+++ b/slow-server.service
@@ -1,6 +1,6 @@
 [Unit]
-Description=Server SlowDNS papatpapatelu
-Documentation=https://t.me/Crystalllz
+Description=Server SlowDNS mousevpn
+Documentation=https://t.me/mousethain
 After=network.target nss-lookup.target
 [Service]
 Type=simple
